--- a/locales/en.yml
+++ b/locales/en.yml
@@ -9,3 +9,4 @@ text:
   help: can help you. If you like it, please give it a star
   empty: No Data
   sure: Whether to confirm the deletion?
+  console: Please open the console to watch
