--- a/locales/zh-CN.yml
+++ b/locales/zh-CN.yml
@@ -5,8 +5,15 @@ button:
   edit: 编辑
   delete: 删除
 text: 
-  hope: 希望
-  help: 能帮你。如果你喜欢它，请给它一个star
   empty: 暂无数据
   sure: 是否确认删除？
   console: 请打开浏览器控制台查看打印信息
+  size: 表格大小：
+  page: 分页大小：
+  align: 分页的对齐方式：
+table:
+  department: 部门名称
+  operate: 操作
+  loading: 正在加载第 1 页...
+  loadingPage: 正在加载第
+  page: 页...
